Use NodeIdentifier to identify datastores
We can use pre-cached NodeIdentifiers to lower GC pressure when flinging
documents.

Change-Id: I2913c109677a3ffb40263bbadf69216a082e19b1
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>